src/style.css
/* ... */
a {
    color: var(--font-color);
    text-decoration: none;
    cursor: pointer;
}

.background {
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    height: 100%;
    width: 100%;
    position: absolute;
    opacity: 0.95;
    animation: bgFadeIn 1.9s cubic-bezier(0.25, 0.04, 0, 0.89) forwards;
    filter: blur(10px);
}

.main {
    position: absolute;
    width: 100%;
    height: calc(100% - 60px);
    scroll-snap-type: y mandatory;
    overflow-y: auto;
    scrollbar-width: none;
}

.main::-webkit-scrollbar {
    display: none;
}

.page {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    height: fit-content;
    min-height: calc(100vh - 90px);
    justify-content: center;
}

.page-title {
    margin: 0 0 20px 140px;
    color: var(--font-color);
    font-size: 25px;
    font-weight: 900;
    width: 100%;
    max-width: 650px;
}

.page-title::before {
    content: '';
    width: 70px;
    height: 36px;
    background-color: var(--font-color);
    position: absolute;
    margin-left: -70px;
}

.page_indicator {
    position: absolute;
    top: 50%;
    right: 20px;
    transform: translateY(-50%);
    display: flex;
    flex-direction: column;
    gap: 10px;
    z-index: 996;
}

.page_indicator .dot {
    width: 10px;
    height: 10px;
    border-radius: 50%;
    background-color: #cccccc77;
    transition: background-color 0.3s ease;
    cursor: pointer;
}

.page_indicator .dot.active {
    background-color: #ffffff;
}

.img {
    width: 135px;
    height: 135px;
    position: relative;
    border-radius: 80px;
}

.main .img .intro {
    bottom: 5px;
    left: 5px;
    position: fixed;
    display: flex;
    flex-direction: row;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.main .img .intro .tag::before {
    content: '#';
}

.main .img .intro .name,
.main .img .intro .tag {
    background-color: var(--background-color);
    width: fit-content;
    backdrop-filter: var(--global-blur);
    -webkit-backdrop-filter: var(--global-blur);
    color: var(--font-color);
    border-radius: 30px;
    padding: 5px 10px;
}

.main .text {
    text-align: center;
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
}

.main .text h1 {
    margin-bottom: 5px;
    color: var(--font-color);
    margin: 20px 15px 5px 15px;
}

.main .text h2 {
    margin: 0;
    font-weight: 300;
    font-size: 15px;
    color: var(--font-secondary-color);
    margin-bottom: 10px;
}

.mediaBtn {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
}

.link-btn-box:hover {
    background-color: var(--btn-hover-color) !important;
}

.link-info-tab {
    display: flex;
    align-items: center;
    justify-content: center;
}

.mediaBtn .btnImage {
    background-position: center;
    background-size: cover;
    padding: 14px 24px !important;
}

.mediaBtn .link-btn-box {
    border-radius: 10px;
    padding: 28px 35px;
    width: 100%;
    max-width: 650px;
    height: 40px;
    color: var(--theme-color);
    text-decoration: none;
    margin: 10px;
    background-color: var(--theme-background-color);
    backdrop-filter: var(--global-blur);
    box-sizing: border-box;
    display: flex;
    align-items: center;
    flex-direction: row;
    justify-content: space-between;
}

.link-desc {
    background-color: var(--theme-background-color);
    border-radius: 30px;
    padding: 5px 15px;
}

.box_container {
    display: flex;
    flex-direction: column;
    background-color: var(--background-color);
    padding: 20px;
    border-radius: 20px;
    margin: 20px;
    width: 100%;
    max-width: 950px;
}

.box_container .header {
    color: var(--font-color);
    font-weight: bolder;
    text-transform: uppercase;
    border-radius: 30px;
    width: fit-content;
    padding: 5px 10px;
    font-size: 18px;
}

.btn_wrapper {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    margin: 10px 0;
}

.link-icon {
    padding: 0 15px;
}

.link-icon-text {
    font-style: normal;
    font-weight: bolder;
    font-family: "Rampart One", serif;
}

.musicIcon,
.githubIcon {
    font-size: 20px;
    margin-right: 5px;
}

.share {
    color: #fff !important;
    text-decoration: none !important;
    z-index: 10;
    position: absolute;
    bottom: 20px;
    right: 20px;
    font-weight: bold;
    opacity: 0.8;
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    justify-content: flex-end;
    overflow: auto;
    scroll-behavior: smooth;
    width: 100%;
    right: 0;
    height: fit-content;
    bottom: 0;
}

.share_footer {
    width: 100%;
    height: 100%;
    background-size: cover;
    background-position: bottom;
    right: 0;
    bottom: 0;
    width: 100%;
    height: 55px;
    position: absolute;
    filter: blur(10px);
    animation: bgFootFadeIn 1.9s cubic-bezier(0.25, 0.04, 0, 0.89) forwards;
}

.share::-webkit-scrollbar {
    display: none;
}

.music {
    margin: 20px 15px;
}

.MusicName {
    color: #fff !important;
    text-decoration: none !important;
}

.MusicName {
    cursor: pointer;
    max-width: 70vw;
    height: 23px;
    overflow: hidden;
    display: block;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.musicNameWrapper {
    display: flex;
    flex-direction: row;
    right: 0;
    position: relative;
    text-align: end;
}

a.MusicName:-webkit-any-link {
    color: unset;
    cursor: pointer;
    text-decoration: none;
}

#dcount-container {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    flex-wrap: wrap;
    width: 40%;
    max-width: 650px;
}
/* ... */

